syntax = "proto3";

option java_package = "com.grpc.grpc_server.services";
option java_outer_classname = "LoginServiceProto";

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;  // Mensaje si el login fue exitoso o fallido
  string role = 2;     // Rol del usuario en caso de login exitoso
}
